[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pipe Spawner/PipeSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scrolling Background/ScrollingBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game Over/GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://CodyBird/CodyBird.gd" type="Script" id=5]
[ext_resource path="res://Main Menu/MainMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=7]

[node name="CodyBird" type="Node2D"]
script = ExtResource( 5 )
player_speed = 500.0
main_menu = NodePath("UI/MainMenu")
hud = NodePath("UI/HUD")
game_over = NodePath("UI/GameOver")
scrolling_background = NodePath("ScrollingBackground")
pipe_spawner = NodePath("PipeSpawner")
player = NodePath("Player")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="UI" instance=ExtResource( 6 )]

[node name="HUD" parent="UI" instance=ExtResource( 7 )]

[node name="GameOver" parent="UI" instance=ExtResource( 4 )]

[node name="ScrollingBackground" parent="." instance=ExtResource( 3 )]

[node name="PipeSpawner" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 162.144, 438.322 )

[connection signal="start_game" from="UI/MainMenu" to="." method="_game_start"]
[connection signal="main_menu" from="UI/GameOver" to="." method="_restart"]
[connection signal="player_crashed" from="Player" to="." method="_game_over"]
[connection signal="player_passed_pipes" from="Player" to="." method="_player_add_score"]
